--- a/slack_app_manifest.yaml.sample
+++ b/slack_app_manifest.yaml.sample
@@ -28,6 +28,7 @@ oauth_config:
     bot:
       - commands
       - chat:write
+      - chat:write.public
       - users.profile:read
       - users:read.email
       - users:read
